--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-heelo this is  y website
-/
-\
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>life going</title>
+</head>
+<body>
+    
+</body>
+</html>
